[package]
name = "epubit-integral"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
clap = { version = "4.1.11", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
regex = "1.7.2"
tokio = "1.26.0"
tempfile = "3.4.0"
reqwest = { version = "0.11.15", default-features = false, features = [ "rustls-tls" ] }
zip = "0.6.4"
directories = "5.0.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
flate2 = "1.0.25"
tar = "0.4.38"
infer = "0.13.0"
exitcode = "1.1.2"
is_executable = "1.0.1"
toml = "0.7.3"
